<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_prompt">Enter total amount</string>
    <string name="submit_label15">15%</string>
    <string name="submit_label20">20%</string>
    <string name="submit_label10">10%</string>
    <string name="output_tip">Tip is $0.00</string>

</resources>
