<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <TextView
        android:id="@+id/tvOutputTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:text="@string/output_tip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnPercent15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvOutputTip"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="146dp"
        android:onClick="onSubmit15"
        android:text="@string/submit_label15" />

    <Button
        android:id="@+id/btnPercent10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnPercent15"
        android:layout_toLeftOf="@+id/btnPercent15"
       	android:onClick="onSubmit10"
        
        android:text="@string/submit_label10" />

    <Button
        android:id="@+id/btnPercent20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnPercent15"
        android:layout_alignBottom="@+id/btnPercent15"
        android:layout_toRightOf="@+id/btnPercent15"
        android:onClick="onSubmit20"
        android:text="@string/submit_label20" />

    <EditText
        android:id="@+id/etInputBillTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/enter_prompt" />

</RelativeLayout>
